--- a/index.html
+++ b/index.html
@@ -17,6 +17,86 @@
             overflow: hidden;
         }
 
+        /* Style du chatbot */
+        #chatbot {
+            position: fixed;
+            bottom: 30px;
+            right: 30px;
+            width: 300px;
+            height: 400px;
+            background-color: #2c3e50;
+            border-radius: 10px;
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+            display: flex;
+            flex-direction: column;
+        }
+
+        #chatbot-header {
+            background-color: #3498db;
+            color: white;
+            padding: 15px;
+            border-radius: 10px 10px 0 0;
+            text-align: center;
+            font-weight: bold;
+        }
+
+        #chatbot-messages {
+            flex-grow: 1;
+            overflow-y: auto;
+            padding: 15px;
+            color: #bdc3c7;
+            font-size: 16px;
+        }
+
+        #chatbot-input {
+            display: flex;
+            padding: 10px;
+            background-color: #ecf0f1;
+            border-radius: 0 0 10px 10px;
+        }
+
+        #chatbot-input input {
+            flex-grow: 1;
+            padding: 10px;
+            font-size: 16px;
+            border: none;
+            border-radius: 5px;
+            margin-right: 10px;
+        }
+
+        #chatbot-input button {
+            padding: 10px 15px;
+            background-color: #3498db;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        #chatbot-input button:hover {
+            background-color: #2980b9;
+        }
+
+        /* Animation d'apparition des messages */
+        .message {
+            margin-bottom: 15px;
+            padding: 10px;
+            background-color: #34495e;
+            border-radius: 5px;
+            max-width: 80%;
+            word-wrap: break-word;
+        }
+
+        .bot-message {
+            background-color: #1abc9c;
+            margin-left: auto;
+        }
+
+        .user-message {
+            background-color: #e74c3c;
+            margin-right: auto;
+        }
+
         /* Message de vérification Cloudflare */
         .cf-message {
             position: absolute;
@@ -313,6 +393,15 @@
         </div>
     </div>
 
+    <div id="chatbot">
+        <div id="chatbot-header">Fish au chocolat</div>
+        <div id="chatbot-messages"></div>
+        <div id="chatbot-input">
+            <input type="text" id="userInput" placeholder="Écris quelque chose...">
+            <button onclick="sendMessage()">Envoyer</button>
+        </div>
+    </div>
+
     <script src="https://utteranc.es/client.js"
         repo="LMTSKTbyStarkot48/LMTSKTbyStarkot48.github.io"
         issue-term="pathname"
@@ -344,6 +433,30 @@
         // Sauvegarde du compteur de visites dans le stockage local
         localStorage.setItem('visitCount', visitCount);
 
+        // Simulation de la discussion avec le bot "Fish au chocolat"
+        function sendMessage() {
+            let userMessage = document.getElementById('userInput').value;
+            if (userMessage.trim() === '') return;
+            addMessage(userMessage, 'user');
+            document.getElementById('userInput').value = '';
+            setTimeout(() => {
+                addMessage("Je suis Fish au chocolat, comment puis-je t'aider ?", 'bot');
+            }, 1000);
+        }
+
+        function addMessage(message, sender) {
+            let messageElement = document.createElement('div');
+            messageElement.classList.add('message');
+            if (sender === 'bot') {
+                messageElement.classList.add('bot-message');
+            } else {
+                messageElement.classList.add('user-message');
+            }
+            messageElement.textContent = message;
+            document.getElementById('chatbot-messages').appendChild(messageElement);
+            document.getElementById('chatbot-messages').scrollTop = document.getElementById('chatbot-messages').scrollHeight;
+        }
+
         // Après un délai, masquer le message de vérification pour simuler la fin de la vérification
         setTimeout(function() {
             document.querySelector('.cf-message').style.display = 'none';
@@ -351,4 +464,3 @@
     </script>
 </body>
 </html>
-
