--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
         }
 
         /* Style du chatbot */
-        #chatbot {
+        .chatbot {
             position: fixed;
             bottom: 30px;
-            right: 30px;
             width: 300px;
             height: 400px;
             background-color: #2c3e50;
@@ -31,7 +30,7 @@
             flex-direction: column;
         }
 
-        #chatbot-header {
+        .chatbot-header {
             background-color: #3498db;
             color: white;
             padding: 15px;
@@ -40,7 +39,7 @@
             font-weight: bold;
         }
 
-        #chatbot-messages {
+        .chatbot-messages {
             flex-grow: 1;
             overflow-y: auto;
             padding: 15px;
@@ -48,14 +47,14 @@
             font-size: 16px;
         }
 
-        #chatbot-input {
+        .chatbot-input {
             display: flex;
             padding: 10px;
             background-color: #ecf0f1;
             border-radius: 0 0 10px 10px;
         }
 
-        #chatbot-input input {
+        .chatbot-input input {
             flex-grow: 1;
             padding: 10px;
             font-size: 16px;
@@ -64,7 +63,7 @@
             margin-right: 10px;
         }
 
-        #chatbot-input button {
+        .chatbot-input button {
             padding: 10px 15px;
             background-color: #3498db;
             color: white;
@@ -73,7 +72,7 @@
             cursor: pointer;
         }
 
-        #chatbot-input button:hover {
+        .chatbot-input button:hover {
             background-color: #2980b9;
         }
 
@@ -393,26 +392,25 @@
         </div>
     </div>
 
-    <div id="chatbot">
-        <div id="chatbot-header">Fish au chocolat</div>
-        <div id="chatbot-messages"></div>
-        <div id="chatbot-input">
-            <input type="text" id="userInput" placeholder="Écris quelque chose...">
-            <button onclick="sendMessage()">Envoyer</button>
+    <!-- Chatbot Fish au chocolat -->
+    <div class="chatbot" style="right: 30px;">
+        <div class="chatbot-header">Fish au chocolat</div>
+        <div class="chatbot-messages" id="chatbot-messages-1"></div>
+        <div class="chatbot-input">
+            <input type="text" id="userInput-1" placeholder="Écris quelque chose...">
+            <button onclick="sendMessage(1)">Envoyer</button>
         </div>
     </div>
 
-    <script src="https://utteranc.es/client.js"
-        repo="LMTSKTbyStarkot48/LMTSKTbyStarkot48.github.io"
-        issue-term="pathname"
-        theme="github-dark"
-        crossorigin="anonymous"
-        async>
-    </script>
-
-    <footer>
-        <p>&copy; 2025 Starkot48 - Tous droits réservés</p>
-    </footer>
+    <!-- Chatbot Fish Girl au chocolat -->
+    <div class="chatbot" style="left: 30px;">
+        <div class="chatbot-header">Fish Girl au chocolat</div>
+        <div class="chatbot-messages" id="chatbot-messages-2"></div>
+        <div class="chatbot-input">
+            <input type="text" id="userInput-2" placeholder="Écris quelque chose...">
+            <button onclick="sendMessage(2)">Envoyer</button>
+        </div>
+    </div>
 
     <script>
         // Chargement du compteur de likes depuis le stockage local
@@ -433,18 +431,18 @@
         // Sauvegarde du compteur de visites dans le stockage local
         localStorage.setItem('visitCount', visitCount);
 
-        // Simulation de la discussion avec le bot "Fish au chocolat"
-        function sendMessage() {
-            let userMessage = document.getElementById('userInput').value;
+        // Simulation de la discussion avec le bot
+        function sendMessage(botId) {
+            let userMessage = document.getElementById('userInput-' + botId).value;
             if (userMessage.trim() === '') return;
-            addMessage(userMessage, 'user');
-            document.getElementById('userInput').value = '';
+            addMessage(userMessage, 'user', botId);
+            document.getElementById('userInput-' + botId).value = '';
             setTimeout(() => {
-                addMessage("Je suis Fish au chocolat, comment puis-je t'aider ?", 'bot');
+                addMessage("Je suis " + (botId === 1 ? "Fish au chocolat" : "Fish Girl au chocolat") + ", comment puis-je t'aider ?", 'bot', botId);
             }, 1000);
         }
 
-        function addMessage(message, sender) {
+        function addMessage(message, sender, botId) {
             let messageElement = document.createElement('div');
             messageElement.classList.add('message');
             if (sender === 'bot') {
@@ -453,8 +451,8 @@
                 messageElement.classList.add('user-message');
             }
             messageElement.textContent = message;
-            document.getElementById('chatbot-messages').appendChild(messageElement);
-            document.getElementById('chatbot-messages').scrollTop = document.getElementById('chatbot-messages').scrollHeight;
+            document.getElementById('chatbot-messages-' + botId).appendChild(messageElement);
+            document.getElementById('chatbot-messages-' + botId).scrollTop = document.getElementById('chatbot-messages-' + botId).scrollHeight;
         }
 
         // Après un délai, masquer le message de vérification pour simuler la fin de la vérification
@@ -464,3 +462,4 @@
     </script>
 </body>
 </html>
+
